<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.phon</groupId>
  <artifactId>phon-csv-plugin</artifactId>
  <name>phon-csv-plugin</name>
  
  <organization>
  	<name>Department of Linguistics, Memorial University of Newfoundland</name>
  	<url>https://www.mun.ca</url>
  </organization>

  <developers>
    <developer>
      <id>ghedlund</id>
      <name>Greg Hedlund</name>
      <email>ghedlund@mun.ca</email>
      <timezone>-3.5</timezone>
    </developer>
  </developers>
  
  <licenses>
    <license>
      <name>GNU GPL v3.0+</name>
      <distribution>repo</distribution>
      <url>http://www.gnu.org/copyleft/gpl.html</url>
    </license>
  </licenses>

  <distributionManagement>
    <repository>
      <id>phon.ca-release</id>
      <name>Phon Release</name>
      <url>https://www.phon.ca/artifacts/libs-release-local</url>
    </repository>
    <snapshotRepository>
      <id>phon.ca-snapshot</id>
      <name>Phon Snapshot</name>
      <url>https://www.phon.ca/artifacts/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>

  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>central</id>
      <name>libs-release</name>
      <url>https://www.phon.ca/artifacts/libs-release</url>
    </repository>
    <repository>
      <snapshots/>
      <id>snapshots</id>
      <name>libs-snapshot</name>
      <url>https://www.phon.ca/artifacts/libs-snapshot</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>central</id>
      <name>plugins-release</name>
      <url>https://www.phon.ca/artifacts/plugins-release</url>
    </pluginRepository>
    <pluginRepository>
      <snapshots/>
      <id>snapshots</id>
      <name>plugins-snapshot</name>
      <url>https://www.phon.ca/artifacts/plugins-snapshot</url>
    </pluginRepository>
  </pluginRepositories>
  
  <dependencies>
      <dependency>
          <groupId>ca.phon</groupId>
          <artifactId>phon-app</artifactId>
          <version>3.0.0-SNAPSHOT</version>
      </dependency>
  </dependencies>
  
  <build>
    <plugins>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>9</source>
          <target>9</target>
          <sourceEncoding>UTF-8</sourceEncoding>
          <compilerArgs>
				<arg>--add-modules</arg>
				<arg>java.xml.bind</arg>
			</compilerArgs>
        </configuration>
      </plugin>
      
      <!-- Generate source for xml schema -->
      <plugin>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-xjc-plugin</artifactId>
			<configuration>
				<extensions>
					<extension>org.apache.cxf.xjcplugins:cxf-xjc-dv:2.3.0</extension>
				</extensions>
			</configuration>
			<executions>
				<execution>
					<id>generate-sources</id>
					<phase>generate-sources</phase>
					<goals>
						<goal>xsdtojava</goal>
					</goals>
					<configuration>
						<sourceRoot>${basedir}/target/generated-sources/xjc</sourceRoot>
						<xsdOptions>
							<xsdOption>
								<xsd>${basedir}/src/main/resources/xml/xsd/CSVImport.xsd</xsd>
								<packagename>ca.phon.csv2phon.io</packagename>
								<bindingFile>${basedir}/src/main/resources/xml/xjb/CSVImport.xjb</bindingFile>
							</xsdOption>
						</xsdOptions>
					</configuration>
				</execution>
			</executions>
		</plugin>
    </plugins>
  </build>
  
  <version>17</version>
</project>
